--- a/docker/services/docker-compose.yml
+++ b/docker/services/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3.9"
 
 services:
   minio:
+#    restart: always
     image: quay.io/minio/minio
     container_name: minio
     command: server --console-address ":9001" /data
@@ -17,6 +18,7 @@ services:
       - backend
 
   imgproxy:
+#    restart: always
     image: darthsim/imgproxy
     container_name: imgproxy
     ports:
@@ -44,6 +46,9 @@ services:
       - backend
 
   postgres:
+#    restart: always
+    user: postgres:postgres
+    # user: "999:999"
     image: postgres:14-alpine
     container_name: postgres
     ports:
@@ -51,9 +56,9 @@ services:
     environment:
       POSTGRES_PASSWORD: jj010479
       POSTGRES_USER: avjpl
-      POSTGRES_DB: default
+      POSTGRES_DB: photos
     volumes:
-      - ~/docker/postgres14:/var/lib/postgresql/data
+      - ~/docker/postgres14/data:/var/lib/postgresql/data
 
 volumes:
   images:
